Update message in index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <main>
   <h1 class="title text-center">druskii128</h1>
-  <p class="text-center">nikhila was here</p>
+  <p class="text-center">conner was here</p>
   <br><br>
   
 <nav>
