Update text and links in index.html

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
 <header class="menubar">
   <nav class="topnav">
-    <a class="active" href="index.html">Home</a>
+    <a class="active" href="index.html">home</a>
     <div class="topnav-right">
-      <a href="https://forms.gle/eRT37jLokfETBNUs6">Request</a>
-      <span>Last Updated: 11/10/25 - ui enhancements & search works now!</span>
+      <a href="https://forms.gle/eRT37jLokfETBNUs6">request</a>
+      <span>last updated: 12/16/25 - ui redesign</span>
     </div>
   </nav>
 </header>
@@ -33,20 +33,20 @@
 <main>
   <div class="hero-section">
     <h1 class="title text-center">druskii128</h1>
-    <p class="text-center" style="color: var(--text-secondary); font-size: 1.15rem; margin-bottom: 10px; font-weight: 500; max-width: 600px; margin-left: auto; margin-right: auto;">🎮 Your ultimate gaming destination - Play hundreds of games instantly!</p>
+    <p class="text-center" style="color: var(--text-secondary); font-size: 1.15rem; margin-bottom: 10px; font-weight: 500; max-width: 600px; margin-left: auto; margin-right: auto;">conner was here</p>
   </div>
   
   <nav>
     <div class="nav-container">
       <div class="search-container">
-        <input class="search-box" id="search-box" type="search" onkeyup="searching(this)" onfocus="fun(this)" placeholder="🔍 Search for your favorite games...">
+        <input class="search-box" id="search-box" type="search" onkeyup="searching(this)" onfocus="fun(this)" placeholder="search...">
         <button class="clear-search" id="clear-search" onclick="clearSearch()" title="Clear search">×</button>
         <div class="search-results" id="search-results"></div>
       </div>
     </div>
   </nav>
   
-  <h2 class="text-center">⭐ Featured Games</h2>
+  <h2 class="text-center">popular games</h2>
 
   <!-- Featured games section -->
   <script src="JS/search.js"></script>
@@ -90,7 +90,7 @@
 
   </div>
   
-  <h2 class="text-center">🎮 All Games</h2>
+  <h2 class="text-center">all games</h2>
   
   <div class="flex-container">
     <!-- All games in alphabetical order -->
