Change theme option from 'Untitled' to 'Pride'

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <select id="theme-dropdown" class="theme-dropdown" title="select theme">
                 <option value="dark">Dark</option>
                 <option value="light">Light</option>
-                <option value="untitled">Untitled</option>
+                <option value="untitled">Pride</option>
             </select>
             <a href="https://forms.gle/eRT37jLokfETBNUs6">request</a>
             <a href="#" id="changelog-btn">changelog</a>
