--- a/index.html
+++ b/index.html
@@ -1,198 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8" />
-
-<!-- Google tag -->
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-R1ZCLH6XCR"></script>
 <script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'G-R1ZCLH6XCR');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R1ZCLH6XCR');
 </script>
-
 <title>Basket And Ball</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+<meta name="HandheldFriendly" content="true" />
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<meta name="theme-color" content="#0b0f1a">
-<meta name="apple-mobile-web-app-capable" content="yes">
-
-<!-- Smooth modern font -->
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-
-<style>
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-html, body {
-  width: 100%;
-  height: 100%;
-  font-family: 'Inter', sans-serif;
-  background: radial-gradient(circle at top, #12182b, #05060a);
-  overflow: hidden;
-}
-
-/* Center wrapper */
-#app {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-/* Game card */
-#game-shell {
-  width: min(100%, 1200px);
-  height: min(100%, 720px);
-  background: rgba(15, 18, 35, 0.85);
-  backdrop-filter: blur(14px);
-  border-radius: 18px;
-  box-shadow: 0 25px 80px rgba(0,0,0,0.6);
-  position: relative;
-  overflow: hidden;
-  animation: fadeIn 0.6s ease;
-}
-
-/* Header */
-#topbar {
-  height: 52px;
-  background: linear-gradient(90deg, #1b1f3b, #12162d);
-  display: flex;
-  align-items: center;
-  padding: 0 18px;
-  font-weight: 700;
-  letter-spacing: 0.5px;
-  color: #fff;
-}
-
-/* Game area */
-#game-container {
-  width: 100%;
-  height: calc(100% - 52px);
-  position: relative;
-}
-
-/* Loader overlay */
-#loader {
-  position: absolute;
-  inset: 0;
-  background: #05060a;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 16px;
-  z-index: 5;
-  animation: fadeIn 0.3s ease;
-}
-
-.spinner {
-  width: 52px;
-  height: 52px;
-  border-radius: 50%;
-  border: 4px solid #2a2f55;
-  border-top: 4px solid #6c7cff;
-  animation: spin 1s linear infinite;
-}
-
-#loader span {
-  color: #9aa3ff;
-  font-size: 14px;
-  opacity: 0.85;
-}
-
-/* Animations */
-@keyframes spin {
-  to { transform: rotate(360deg); }
-}
-
-@keyframes fadeIn {
-  from { opacity: 0; transform: scale(0.98); }
-  to { opacity: 1; transform: scale(1); }
-}
-
-/* Mobile full screen */
-@media (max-width: 768px) {
-  #game-shell {
-    border-radius: 0;
-    width: 100%;
-    height: 100%;
-  }
-}
-</style>
+<meta name="mobile-web-app-capable" content="yes" />
 
 <script>
 (function (document, url, fgJS, firstJS) {
-  fgJS = document.createElement('script');
-  firstJS = document.getElementsByTagName('script')[0];
-  fgJS.src = url + encodeURIComponent(document.location.href);
-  firstJS.parentNode.insertBefore(fgJS, firstJS);
+   fgJS = document.createElement('script');
+firstJS = document.getElementsByTagName('script')[0];
+
+fgJS.src = url + encodeURIComponent(document.location.href);
+firstJS.parentNode.insertBefore(fgJS, firstJS);
 })(document, '/html5games/gameapi/v1.js?e=');
 </script>
+
 </head>
 
-<body>
-<div id="app">
-  <div id="game-shell">
-    
-    <div id="topbar">🏀 Basket And Ball</div>
 
-    <div id="game-container">
-      <div id="loader">
-        <div class="spinner"></div>
-        <span>Loading game…</span>
-      </div>
-    </div>
+<body style="width:100%;height:100%;overflow: hidden;margin:0px;padding:0px;background-color:#000;-ms-touch-action: none;touch-action: none;touch-action-delay: none;-webkit-touch-callout: none;">
 
-  </div>
-</div>
 
-<!-- Game Loader -->
-<script src="loader.js"></script>
+<script type="text/javascript" src="loader.js"></script>
 
-<script>
-var settings = {
-  gameId: "4f3d7d38d24b740c95da2b03dc3a2333",
-  userId: "31D29405-8D37-4270-BF7C-8D99CCF0177F-s1",
-  resumeGame: resumeGame,
-  pauseGame: pauseGame,
-  onInit: function () {
-    document.getElementById("loader").style.display = "none";
-  },
-  onError: function (e) {
-    console.error(e);
-  }
-};
+    <script>
+        var settings = {
+            gameId: "4f3d7d38d24b740c95da2b03dc3a2333",
+            userId: "31D29405-8D37-4270-BF7C-8D99CCF0177F-s1",
+            resumeGame: resumeGame,
+            pauseGame: pauseGame,
+            onInit: function (data) {
+                console.log("Init:"+data);
+            },
+            onError: function (data) {
+                console.log("Error:"+data);
+            }
+        };
+        (function(i,s,o,g,r,a,m){
+            i['GameDistribution']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)};i[r].l=1*new Date();a=s.createElement(o);m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a, m);
+        })(window, document, 'script', 'patch/js/gd-sdk.js?html5.api.gamedistribution.com/libs/gd/api.js', 'gdApi');
+        gdApi(settings);
 
-(function(i,s,o,g,r,a,m){
-  i['GameDistribution']=r;
-  i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)};
-  a=s.createElement(o);
-  m=s.getElementsByTagName(o)[0];
-  a.async=1;
-  a.src=g;
-  m.parentNode.insertBefore(a,m);
-})(window, document, 'script',
-'patch/js/gd-sdk.js?html5.api.gamedistribution.com/libs/gd/api.js',
-'gdApi');
 
-gdApi(settings);
+        function resumeGame() {
+            console.log("Resume game");
+        }
 
-function resumeGame(){}
-function pauseGame(){}
-</script>
-
-<!-- Analytics + Firebase -->
-<script src="js/analytics_ubg_v1_4.js"></script>
-<script src="js/ubg235_client_v1_1.js"></script>
+        function pauseGame() {
+            console.log("Pause game");
+        }
+    </script>
+  <script src="js/analytics_ubg_v1_4.js"></script>
+  <script src="js/ubg235_client_v1_1.js"></script>
+<!-- Firebase (compat) -->
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
+<!-- Firebase config -->
 <script src="/JS/firebase-config.js"></script>
+<!-- Presence tracker -->
 <script src="/JS/presence.js"></script>
 
 </body>
