--- a/index.html
+++ b/index.html
@@ -1,77 +1,151 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-R1ZCLH6XCR"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>druskii128 | Free Online Games</title>
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+<meta name="description" content="Play free online games on druskii128. Hundreds of HTML5 and browser-based games with no downloads!">
+<meta name="keywords" content="free games, online games, browser games, html5 games">
+<meta name="author" content="druskii128">
 
-  gtag('config', 'G-R1ZCLH6XCR');
-</script>
-<title>Basket And Ball</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
-<meta name="apple-mobile-web-app-capable" content="yes" />
-<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-<meta name="HandheldFriendly" content="true" />
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
-<meta name="mobile-web-app-capable" content="yes" />
+<style>
+  /* VARIABLES */
+  :root {
+    --color-bg: #f5f6fa;
+    --color-card-bg: #ffffff;
+    --color-card-hover: #e1e4eb;
+    --color-primary: #4f46e5;
+    --color-text: #1f2937;
+    --color-text-muted: #6b7280;
+    --color-online: #22c55e;
+    --color-in-game: #f97316;
+    --transition: 0.3s ease;
+    --border-radius: 12px;
+  }
+  [data-theme="dark"] {
+    --color-bg: #121212;
+    --color-card-bg: #1e1e1e;
+    --color-card-hover: #272727;
+    --color-text: #f5f5f5;
+    --color-text-muted: #9ca3af;
+  }
 
-<script>
-(function (document, url, fgJS, firstJS) {
-   fgJS = document.createElement('script');
-firstJS = document.getElementsByTagName('script')[0];
+  /* BASE STYLES */
+  * { box-sizing: border-box; margin:0; padding:0; font-family: 'Inter', sans-serif; }
+  body { background: var(--color-bg); color: var(--color-text); line-height: 1.5; transition: background var(--transition), color var(--transition); }
 
-fgJS.src = url + encodeURIComponent(document.location.href);
-firstJS.parentNode.insertBefore(fgJS, firstJS);
-})(document, '/html5games/gameapi/v1.js?e=');
-</script>
+  /* HEADER */
+  header { width: 100%; background: var(--color-card-bg); backdrop-filter: blur(10px); box-shadow: 0 2px 10px rgba(0,0,0,0.05); position: sticky; top:0; z-index:100; }
+  nav { display: flex; justify-content: space-between; align-items: center; padding: 12px 24px; gap: 12px; flex-wrap: wrap; }
+  nav a { text-decoration: none; color: var(--color-text); font-weight: 600; transition: color var(--transition); }
+  nav a:hover { color: var(--color-primary); }
+  .search-inline { position: relative; flex:1 1 200px; max-width: 400px; }
+  .search-box { width: 100%; padding: 8px 40px 8px 12px; border-radius: var(--border-radius); border: 1px solid #ccc; transition: all var(--transition); }
+  .search-box:focus { outline: none; border-color: var(--color-primary); box-shadow: 0 0 0 2px rgba(79,70,229,0.2); }
+  .clear-search { position: absolute; right:8px; top:50%; transform:translateY(-50%); background:none;border:none;font-size:1rem;cursor:pointer;opacity:0.6;transition: opacity var(--transition); }
+  .clear-search:hover { opacity:1; }
+
+  /* THEME TOGGLE */
+  .theme-toggle { background:none;border:none;cursor:pointer;font-size:1.25rem;transition: transform var(--transition); }
+  .theme-toggle:hover { transform: rotate(20deg); }
+
+  /* HERO SECTION */
+  .hero-section { text-align: center; padding: 60px 20px 40px; }
+  .hero-section .title { font-size: 3rem; font-weight: 700; margin-bottom: 12px; }
+  .hero-section p { font-size: 1.1rem; color: var(--color-text-muted); max-width:600px; margin: 0 auto 20px; }
+
+  .presence-indicator { display:flex; justify-content:center; align-items:center; gap:8px; color: var(--color-text-muted); margin-top:12px; }
+  .presence-dot { width:10px; height:10px; border-radius:50%; display:inline-block; background: var(--color-online); }
+
+  /* GAME SECTIONS */
+  h2.text-center { text-align:center; font-size:1.75rem; margin:40px 0 24px; font-weight:600; color: var(--color-text); }
+  .flex-container { display:grid; grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)); gap:20px; padding:0 24px; }
+
+  .game-tile, .game-tile-popular { background: var(--color-card-bg); border-radius: var(--border-radius); overflow:hidden; box-shadow:0 2px 10px rgba(0,0,0,0.05); transition: all var(--transition); cursor:pointer; display:flex; flex-direction:column; align-items:center; text-align:center; padding:12px; }
+  .game-tile:hover, .game-tile-popular:hover { background: var(--color-card-hover); transform: translateY(-4px); box-shadow:0 8px 20px rgba(0,0,0,0.1); }
+  .game-icon { width:100%; border-radius: var(--border-radius); object-fit:cover; margin-bottom:12px; }
+  .game-title { font-size:1rem; font-weight:600; margin-bottom:6px; }
+  .play-counter { display:flex; justify-content:center; align-items:center; gap:4px; font-size:0.85rem; color: var(--color-text-muted); }
+  
+  /* FOOTER */
+  footer { margin-top:60px; padding:24px; background: var(--color-card-bg); color: var(--color-text-muted); text-align:center; border-top:1px solid #ddd; }
+  footer a { margin:0 6px; color: var(--color-text-muted); text-decoration:none; font-weight:500; transition: color var(--transition); }
+  footer a:hover { color: var(--color-primary); }
+
+  /* MODALS */
+  .modal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.4); backdrop-filter: blur(2px); justify-content:center; align-items:center; z-index:200; }
+  .modal-content { background: var(--color-card-bg); padding:24px; border-radius: var(--border-radius); max-width:500px; width:90%; box-shadow:0 10px 30px rgba(0,0,0,0.2); }
+  .modal-close { float:right; cursor:pointer; font-size:1.25rem; }
+
+  /* LOADING SPINNER */
+  #loading-overlay { position:fixed; inset:0; background:rgba(0,0,0,0.2); display:none; z-index:300; }
+  #loading-spinner { position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); display:none; width:50px; height:50px; border:5px solid #ccc; border-top-color: var(--color-primary); border-radius:50%; animation:spin 1s linear infinite; z-index:301; }
+  #loading-spinner.active, #loading-overlay.active { display:block; }
+  @keyframes spin { 0%{transform:translate(-50%,-50%) rotate(0deg);} 100%{transform:translate(-50%,-50%) rotate(360deg);} }
+
+  /* ADS */
+  .ad-container { margin:40px auto; max-width:728px; text-align:center; }
+
+  /* RESPONSIVE */
+  @media(max-width:600px){ nav{flex-direction:column; align-items:flex-start;} .flex-container{grid-template-columns:repeat(auto-fill,minmax(140px,1fr)); gap:16px;} .hero-section .title{font-size:2.2rem;} }
+</style>
 
 </head>
+<body data-theme="light">
 
+<header>
+  <nav>
+    <a class="active" href="index.html">Home</a>
+    <div class="search-inline">
+      <input type="search" id="search-box" placeholder="Search games...">
+      <button class="clear-search" id="clear-search">×</button>
+    </div>
+    <div>
+      <button id="theme-toggle" class="theme-toggle">🌙</button>
+      <a href="https://tally.so/r/aQ5WZ2">Request</a>
+      <a href="#" id="changelog-btn">Changelog</a>
+      <span id="last-updated" style="font-size:0.75rem;">last updated: loading…</span>
+    </div>
+  </nav>
+</header>
 
-<body style="width:100%;height:100%;overflow: hidden;margin:0px;padding:0px;background-color:#000;-ms-touch-action: none;touch-action: none;touch-action-delay: none;-webkit-touch-callout: none;">
+<main>
+  <section class="hero-section">
+    <h1 class="title">druskii128</h1>
+    <p id="hero-text">loading...</p>
+    <div class="presence-indicator">
+      <span class="presence-dot"></span>
+      <span>👤 <span id="online-count">0 online</span></span>
+      <span style="margin-left:8px;color:var(--color-in-game);">0 in game</span>
+    </div>
+  </section>
 
+  <h2 class="text-center">Trending Games</h2>
+  <div id="trending-games" class="flex-container"></div>
 
-<script type="text/javascript" src="loader.js"></script>
+  <h2 class="text-center">All Games</h2>
+  <div id="all-games" class="flex-container"></div>
+</main>
 
-    <script>
-        var settings = {
-            gameId: "4f3d7d38d24b740c95da2b03dc3a2333",
-            userId: "31D29405-8D37-4270-BF7C-8D99CCF0177F-s1",
-            resumeGame: resumeGame,
-            pauseGame: pauseGame,
-            onInit: function (data) {
-                console.log("Init:"+data);
-            },
-            onError: function (data) {
-                console.log("Error:"+data);
-            }
-        };
-        (function(i,s,o,g,r,a,m){
-            i['GameDistribution']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)};i[r].l=1*new Date();a=s.createElement(o);m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a, m);
-        })(window, document, 'script', 'patch/js/gd-sdk.js?html5.api.gamedistribution.com/libs/gd/api.js', 'gdApi');
-        gdApi(settings);
+<footer>
+  <a href="privacy-policy.html">Privacy Policy</a>
+  <a href="terms-of-service.html">Terms of Service</a>
+  <a href="about.html">About</a>
+  <a href="https://forms.gle/eRT37jLokfETBNUs6" target="_blank">Contact</a>
+</footer>
 
-
-        function resumeGame() {
-            console.log("Resume game");
-        }
-
-        function pauseGame() {
-            console.log("Pause game");
-        }
-    </script>
-  <script src="js/analytics_ubg_v1_4.js"></script>
-  <script src="js/ubg235_client_v1_1.js"></script>
-<!-- Firebase (compat) -->
-<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
-<!-- Firebase config -->
-<script src="/JS/firebase-config.js"></script>
-<!-- Presence tracker -->
-<script src="/JS/presence.js"></script>
+<script>
+  // Theme Toggle
+  const toggleBtn = document.getElementById('theme-toggle');
+  toggleBtn.addEventListener('click', () => {
+    document.body.dataset.theme = document.body.dataset.theme === 'light' ? 'dark' : 'light';
+    toggleBtn.textContent = document.body.dataset.theme === 'light' ? '🌙' : '☀️';
+  });
+</script>
 
 </body>
 </html>
