--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="description" content="Play free online games on Elijah Games. Browse through hundreds of browser-based games including action, puzzle, sports, and arcade games. No downloads required!">
 <meta name="keywords" content="free games, online games, browser games, flash games, html5 games, web games">
 <meta name="author" content="Elijah Games">
-<meta property="og:title" content="druskii128 - Free Online Games">
+<meta property="og:title" content="Elijah Games - Free Online Games">
 <meta property="og:description" content="Play free online games on elijah games. No downloads required!">
 <meta property="og:type" content="website">
 <meta name="robots" content="index, follow">
@@ -74,7 +74,7 @@
     <!-- search moved to topbar -->
 
   <div class="hero-section">
-    <h1 class="title">druskii128</h1>
+    <h1 class="title">Elijah Games</h1>
         <p id="hero-text" style="color: var(--text-secondary); font-size: 1rem; margin-bottom: 20px; font-weight: 400; max-width: 600px;">loading...</p>
         <div class="presence-indicator" id="presence-indicator" style="margin-top: 12px; display: flex; align-items: center; gap: 8px; color: var(--text-secondary);">
             <span class="presence-dot" aria-hidden="true" style="width: 10px; height: 10px; border-radius: 50%; background: var(--color-online); display: inline-block;"></span>
