--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
               </div>
           </a>
 		  
-		  <a href="projects/blackjack/index.html" class="game-link container">
+		  <a href="projects/blackjack/Granny.html" class="game-link container">
               <div class="game-tile">
-                  <img class="game-icon" src="projects/blackjack/thumb.png" alt="icon" width="360" height="360" />
-                  <h1 class="game-title">Blackjack</h1>
+                  <img class="game-icon" src="projects/Granny/granny.png" alt="icon" width="360" height="360" />
+                  <h1 class="game-title">Granny</h1>
               </div>
           </a>
 		  
